Added automatic 7z compression to renderer

--- a/tiles/zonegen/templates/render.template
+++ b/tiles/zonegen/templates/render.template
@@ -16,3 +16,10 @@ cd ../../../base
 echo "[Cleanup] This may take a while so hold tight."
 cd ../../../output/{zone}-{region}-{name}/
 find . -empty -type d -delete
+
+# packup
+echo "[Packing] Please wait."
+7z a {zone}-{region}-{name}.7z .
+
+# done
+echo "[Done] Ready for upload."
